fix: fixed crappy overflow scroll

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -56,10 +56,6 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-
-  @media (max-width: 768px) {
-    overflow-x: hidden;
-  }
 }
 
 p {
