--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -20,6 +20,7 @@
     img {
       display: none;
     }
+    width: 100vw;
   }
 }
 
@@ -101,7 +102,6 @@
   }
 
   .site-nav {
-    height: 100%;
     width: 300px;
     left: -301px;
   }
